[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobula-py"
version = "0.1.0"
description = "Typed Python client for the Mobula API (multi-chain crypto market, on-chain & wallet data)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Robert Ruben", email = "robert.benitez@treew.com" }]
keywords = [
    "mobula",
    "crypto",
    "cryptocurrency",
    "market-data",
    "blockchain",
    "web3",
    "defi",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/robertruben98/mobula-py"
Repository = "https://github.com/robertruben98/mobula-py"
Documentation = "https://docs.mobula.io"
Issues = "https://github.com/robertruben98/mobula-py/issues"
Changelog = "https://github.com/robertruben98/mobula-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/mobula"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
# UP007/UP045 would rewrite Optional[X]/Union[X, Y] to X | Y, which breaks
# pydantic runtime annotation evaluation on Python 3.9.
ignore = ["UP007", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
# Type-check the library only by default; tests use respx fixtures and don't
# need strict typing. CI runs `mypy --strict src`.
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live tests that hit the real Mobula API (deselected by default; require MOBULA_API_KEY)",
]
addopts = "-m 'not integration'"
